--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "An app to display movies list searched by the user",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "live-server"
+  },
+  "dependencies":{
+    "live-server": "1.2.1"
   },
   "repository": {
     "type": "git",
